Mise à jour de la modal avec l'image aléatoire générée.

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ header {
     font-weight: lighter;
 }
 .film-card button {
-    background-color: #ff00c8;
+    background-color: #ff0000;
     color: #fff;
     border: none;
     padding: 16px 40px;
